--- a/.gitignore
+++ b/.gitignore
@@ -97,9 +97,9 @@ nbactions.xml
 nb-configuration.xml
 
 ## Gradle
-
 /local.properties
 .gradle/
+/gradle/
 gradle-app.setting
 /build/
 /android/build/
